--- a/index.html
+++ b/index.html
@@ -4,31 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Louco por Burger</title>
+    <title>Loucos por Burger</title>
 </head>
 <body>
 
-        <header>
-            <nav>
-                <img src="image/logo.png" alt="logo">
-                <div class="mobile-menu">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                    <div class="line3"></div>
+        <header class="main-header">
+            <div class="header-content">
+                <nav class="topics">
+                    <li>Home</li>
+                    <li>Sobre</li>
+                    <li><a href="cadastro.html">Cadastro</a></li>
+                </nav>
+                <div class="logo">
+                    <img src="image/logo.png" alt="logo-img">
                 </div>
-
-                <ul class="nav-list">
-                    <a href=""><li>Home</li></a>
-                    <a href=""><li>Sobre</li></a>
-                    <a href=""><li>Contato</li></a>
-                </ul>
-            </nav>
+            </div>
         </header>
 
         <main>
-            <h1>Seja bem-vindo ao paraíso dos amantes de hambúrguer !</h1>
-            <p>O "Loucos por Hambúrguer" é mais do que um site, é um convite para explorar, saborear e celebrar a cultura hamburgueriana em sua forma mais sincera e emocionante. Junte-se a nós nessa jornada de descoberta e apaixone-se ainda mais pelo mundo do hambúrguer. Seja bem-vindo ao "Loucos por Hambúrguer", onde a paixão pelo hambúrguer é celebrada em cada mordida!</p>
+            <div class="banner">
+                <div class="content">
+                <div class="text-content">
+                    <h1 id="title"><strong>Seja bem-vindo</strong> ao <br> paraíso dos amantes de hambúrguer !</h1>
+                    <p id="copy-text">O "Loucos por Hambúrguer" é mais do que um site, é um convite para explorar, saborear e celebrar a cultura hamburgueriana em sua forma mais sincera e emocionante. Junte-se a nós nessa jornada de descoberta e apaixone-se ainda mais pelo mundo do hambúrguer. Seja bem-vindo ao "Loucos por Hambúrguer", onde a paixão pelo hambúrguer é celebrada em cada mordida!</p>
+                </div>
+
+                <img class="banner-img" src="image/banner-img.png" alt="burger-img">
+            </div>
         </main>
+
+        <section class="banner-2">
+            <div class="text-content-2">
+                <h1 id="title-2">Curiosidade do mês</h1>
+                <p id="copy-text-2">28 de Maio, é comemorado o dia do hambúguer. Dia dessa delícia da culinária Americana que ganhou o mundo. Só para ter uma idéia, atualmente ele representa 60% das vendas de lanches pelo planeta todo.</p>
+            </div>
+
+            <div class="logo-2">
+                <img src="image/logo.png" alt="logo">
+            </div>
+        </section>
     </header>
+
+    <footer>
+        <div class="footer-content">
+            <p>Desenvolvido por Geovana Beltrão - UI/UX Design</p>
+        </div>
+    </footer>
 </body>
 </html>
