--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 
         <header class="main-header">
             <div class="header-content">
-                <nav class="topics">
-                    <li>Home</li>
-                    <li>Sobre</li>
-                    <li><a href="cadastro.html">Cadastro</a></li>
+                <nav>
+                    <input type="checkbox" id="checkbox" class="checkbox">
+                    <label for="checkbox" class="label-topics"><span class="hamburguer"></span></label>
+                    <ul class="topics">
+                        <li><a href="index.html">Home</a></li>
+                        <li>Sobre</li>
+                        <li><a href="cadastro.html">Cadastro</a></li>
+                    </ul>
                 </nav>
                 <div class="logo">
                     <img src="image/logo.png" alt="logo-img">
